Refactored batch job, putting common functionalities in utils package

--- a/pom.xml
+++ b/pom.xml
@@ -12,5 +12,13 @@
         <module>spark-lambda</module>
     </modules>
 
+    <dependencies>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.4</version>
+        </dependency>
+    </dependencies>
+
 
 </project>
