--- a/spark-lambda/src/main/resources/application.conf
+++ b/spark-lambda/src/main/resources/application.conf
@@ -4,4 +4,6 @@ clickstream {
   pages = 15
   visitors = 1000000
   file_path = "f:\\Project\\Boxes\\spark-kafka-cassandra-applying-lambda-architecture\\vagrant\\data.tsv"
+  destination_path = "f:\\Project\\Boxes\\spark-kafka-cassandra-applying-lambda-architecture\\vagrant\\input\\"
+  number_of_files = 50
 }
