Changed log producer to produce in kafka topic. Streaming Functionality changes(kafka)

--- a/spark-lambda/src/main/resources/application.conf
+++ b/spark-lambda/src/main/resources/application.conf
@@ -6,4 +6,5 @@ clickstream {
   file_path = "f:\\Project\\Boxes\\spark-kafka-cassandra-applying-lambda-architecture\\vagrant\\data.tsv"
   destination_path = "f:\\Project\\Boxes\\spark-kafka-cassandra-applying-lambda-architecture\\vagrant\\input\\"
   number_of_files = 50
+  kafka_topic = "weblogs-text"
 }
