--- a/spark-lambda/src/main/resources/application.conf
+++ b/spark-lambda/src/main/resources/application.conf
@@ -7,4 +7,5 @@ clickstream {
   destination_path = "f:\\Project\\Boxes\\spark-kafka-cassandra-applying-lambda-architecture\\vagrant\\input\\"
   number_of_files = 50
   kafka_topic = "weblogs-text"
+  hdfs_path = "hdfs://lambda-pluralsight:9000/lambda/weblogs-app1/"
 }
